--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -48,7 +48,7 @@
 
 .experience_container > div {
     background: var(--color-bg-variant);
-    padding: 2.4rem 5rem;
+    padding: 2.4rem 2rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
@@ -71,11 +71,17 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 2rem;
+    align-content: space-between;
+    column-gap: 5rem;
+    /* width: 100%; */
+    /* background-color: red; */
+
 }
 
 .experience_details {
     display: flex;
     gap: 1rem;
+    /* justify-content: space-between; */
 }
 
 .experience_details-icon {
