--- a/src/components/portfollio/portfolio.css
+++ b/src/components/portfollio/portfolio.css
@@ -1,8 +1,13 @@
 .portfolio_container {
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-gap: 1rem;
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+ gap: 30px;
+
+
+/* display: grid; */
+/* grid-template-columns: repeat(min-max, (auto, 1fr)); */
+/* background-color: red; */
 }
 .portfolio_item {
     background: var(--color-bg-variant);
@@ -10,8 +15,11 @@ gap: 1rem;
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
-    height: 50%;
-    width: 50%;
+    max-height: 50%;
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .portfolio {
@@ -47,8 +55,13 @@ gap: 1rem;
 
 .portfolio_item-image {
     border-radius: 1.5rem;
-    overflow: hidden;
-
+    /* overflow: hidden; */
+    max-height: 400px;
+}
+.portfolio_item-image > img {
+    height: 300px;
+    background-color: green;
+    border-radius: 10px;
 }
 
 .portfolio_item h3 {
@@ -61,6 +74,7 @@ gap: 1rem;
     display: flex;
     gap: 1rem;
     margin-bottom: 1rem;
+    
 }
 
 .app_description {
