--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body {
 
 }
 
+
 /* ================== GENERAL STYLES =============== */
 
 .container {
@@ -50,6 +51,10 @@ body {
 
 h1,h2,h3,h4,h5 {
     font-weight: 500;
+}
+
+.color {
+    color:  var(--color-primary);
 }
 
 h1 {
